dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  labels:
    app: dev-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
      - name: dev-app
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
